<resources>
    <string name="app_name">Parse Email Verification</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">9w4DL7RaOfLT2ObIm5gpUJHjDTFy348PU1L5Ka98</string>
    <string name="back4app_client_key">1HEwDiGnIGxk795zqz01ife3iEMHJQ8Tl9ZFkb2L</string>

    <string name="email_hint">Enter Email ID</string>
    <string name="pass_hint">Enter Password</string>
    <string name="user_hint">Enter Username</string>

    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="go_to_login">Already have an account?</string>
    <string name="btn_goToLogin">GO TO LOGIN PAGE</string>
    <string name="go_to_signup">Don\'t have an account?</string>
    <string name="btn_goToSignup">CREATE ACCOUNT</string>

</resources>